# parallel_programming_MIPT

./: .gitmodules  README.md
lab1/: CMakeLists.txt  plot.py  run.sh
lab1/src/diffusion/: diffusion.c  evaluation.c  evaluation.h  run_info.c  run_info.h
lab1/src/interaction_time/: inter_time.c
lab1/src/pi_eval/: eval.c  eval.h  pi_eval.c
lab2/: CMakeLists.txt  gener.py
lab2/integral_evaluator/: CMakeLists.txt
lab2/integral_evaluator/src/: integral_evaluator.cpp  integral_evaluator.hpp  main.cpp
lab2/inter_time/: CMakeLists.txt
lab2/inter_time/src/: pipe.cc  shared.c
lab2/src/: bitonic_sort.hpp  main.cpp
lab2/test/data/: data03.in  data04.in  data05.in
lab2/test/googletest/: generative_test.cpp  sainty_test.cpp
lab3/game_of_life/: CMakeLists.txt  bench.sh  build.sh  run.sh
lab3/game_of_life/src/: main.cpp
lab3/game_of_life/src/UI/: vizualization.py
lab3/game_of_life/src/core/: Board.cpp  Board.hpp  BoardSerializer.cpp  BoardSerializer.hpp
